# hyformer

./: .gitignore  LICENSE  README.md  env.yml  env_experiments.yml  env_minimal.yml  environment-experiments.yml  hyformer-experiments.yml  hyformer.yml  jointformer.yml  migrate_guacamol.sh  pyproject.toml  pytorch_example.py  requirements.txt  requirements_llama.txt  run_gumbeldore_inc_sbs_sa.sh  setup.py
data/vocabulary/: aa.txt  guacamol.txt  unimol.txt
examples/: 00-evaluate-conditional-sampling.ipynb  00-load-dataset.ipynb  00-load-datasets.ipynb  01-generate-molecules.ipynb  02-build-vocabulary.ipynb  02-debug-training.ipynb  02-encode-molecules.ipynb  02-fibsrosis.ipynb  03-evaluate-perplexity.ipynb  03-extract-embeddings.ipynb  04-pmo.ipynb  99-best-of-k-generation.ipynb  99-debug-training.ipynb  99-hparams-opt.ipynb  99-hpo.ipynb  99-hyperparameters_tuning.ipynb  99-regression-transformer.ipynb  fudge.ipynb
examples/tokenization/: tokenizer_comparison.py
experiments/: verify_torch.py
experiments/conditional_sampling/: generate.py  run_surrogate.py  test.py  train.py  utils.py
experiments/data/: download_data.py  extract_features.py  extract_targets.py  extract_targets.slurm  filter_nans.py  preprocess_data.py  preprocess_smiles.py  preprocess_smiles_with_properties.py
experiments/data_efficient_domain_adaptation/: aggregate_results.py  hyperparameters_grid.json  run.py  test.py  train.py
experiments/distribution_learning/: evaluate_guacamol.py  sampling_throughput.py  test.py  train.py
experiments/fibrosis/: run.py
experiments/fibrosis_prediction/: find_best_hparams.py  metrics.py  run.py  save_best_hparams.py  test.py  train.py
experiments/hi/: joint.py  run.py  run_joint.py  test.py  train.py
experiments/joint_training/: assess_distribution_learning.py  eval.py  features_eval.sh  run_jointformer.sh  train.py
experiments/molecule_net/: optuna_distributed_worker.py  optuna_hparams_grid.json  optuna_hparams_grid_test.json  optuna_hparams_search_space.json  optuna_hparams_search_space_small.json  optuna_hparams_search_space_test.json  run.py
experiments/moses/: evaluate.py  generate.py
experiments/notebooks/: 00-conditional-sampling.ipynb  00-data.ipynb  00-evaluate-conditional-sampling.ipynb  00-hyformer-forward-test.ipynb  00-jointformer-example.ipynb  00-pmo-benchmark.ipynb  01-hyformer-generate.ipynb  01-jointformer-training.ipynb  03-extract-embeddings.ipynb  99-best-of-k-generation.ipynb  99-development.ipynb  99-hparams-opt.ipynb  99-knn-probe.ipynb  99-ood-detection.ipynb  99-regression-transformer.ipynb  99-test.ipynb  fudge.ipynb
experiments/pmo/: utils.py
experiments/pretrain/: evaluate_guacamol.py
experiments/property_prediction/: test.py  train.py
experiments/utils/: build_vocabulary.py  extract_target.py  extract_target_fast.py  get_unimol.py  load_unimol.py
experiments/vocabulary/: build.py
hyformer/: __init__.py
hyformer/configs/: README.md  __init__.py  base.py  dataset.py  logger.py  model.py  tokenizer.py  trainer.py
hyformer/examples/: build_vocabulary.py  hyperparameter_optimization.py  llama_smiles_tokenizer_demo.py  smiles_tokenizer_example.py
hyformer/models/: README.md  __init__.py  auto.py  backbone.py  base.py  encoder.py  gpt.py  hyformer.py  joint_transformer.py  jointformer.py  jointformer_encoder_context.py  jointformer_v2.py  llama_backbone.py  llama_wrapper.py  regression_transformer.py  trainable.py  transformer.py  unimol.py  utils.py  wrappers.py
hyformer/tokenizers/: __init__.py  amino_acid.py  auto.py  base.py  hf.py  smiles.py
hyformer/trainers/: trainer.py  trainer_debuged.py  utils.py
hyformer/utils/: __init__.py  chemistry.py  collator.py  config_utils.py  data.py  data_loading.py  (+8 more)
random_transfer/: config.json
scripts/: featurize.py  generate.py  predict.py  verify_installation.py
(+430 files in other folders)
